Network config: Explicitly show save or connect

Using the configured and saved state of a network to determine whether
to show 'Save' or 'Connect' was not always correct; instead let the UI
determine which button to show.

Also includes a minor improvement to the error messaging.

Bug: 814939
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: Ifb9a854826a3e4f45c17cb22ef03ed6b23c6f58c
Reviewed-on: https://chromium-review.googlesource.com/943922
Reviewed-by: Toni Barzic <tbarzic@chromium.org>
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540624}
Former-commit-id: 6cf247600f9ac97acde5ccf81c9634c1144ee0a0