chrome/browser/resources/chromeos/internet_config_dialog/internet_config_dialog.js
@@ -131,6 +131,6 @@ Polymer({
 
   /** @private */
   onConnectTap_: function() {
-    this.$.networkConfig.saveOrConnect();
+    this.$.networkConfig.connect();
   },
 });
